[gd_scene load_steps=11 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://imag/Card4.jpg" type="Texture" id=2]
[ext_resource path="res://imag/Card1.jpg" type="Texture" id=3]
[ext_resource path="res://imag/Card3.jpg" type="Texture" id=4]
[ext_resource path="res://Telas/GabinteMesa.jpg" type="Texture" id=5]
[ext_resource path="res://imag/speaker-at-a-conference.png" type="Texture" id=6]
[ext_resource path="res://imag/card6.jpeg" type="Texture" id=7]
[ext_resource path="res://imag/group.png" type="Texture" id=8]
[ext_resource path="res://imag/Captura de Tela 2022-02-18 Ã s 09.30.42.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "a",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "card3",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "card1",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "card2",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "consulta",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "card0",
"speed": 5.0
} ]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 508, 292 )
scale = Vector2( 0.9, 0.76694 )
frames = SubResource( 1 )
animation = "a"

[node name="BG" type="Sprite" parent="."]
position = Vector2( 514, 300.312 )
scale = Vector2( 0.539548, 0.554977 )
z_index = -1
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 500, 291 )
scale = Vector2( 0.701942, 0.690965 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0.25098, 0.258824, 0.313726, 1 )
margin_left = 81.0
margin_top = 67.0
margin_right = 206.0
margin_bottom = 87.0
text = "Apoio Popular: 60%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
modulate = Color( 0.382812, 0.0343933, 0.0343933, 1 )
margin_left = 81.0
margin_top = 137.0
margin_right = 205.0
margin_bottom = 157.0
text = "Apoio Camara: 10%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Positivo" type="Button" parent="."]
margin_left = 429.0
margin_top = 523.0
margin_right = 500.0
margin_bottom = 543.0
text = "Concorda"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Negativo" type="Button" parent="."]
margin_left = 572.0
margin_top = 523.0
margin_right = 645.0
margin_bottom = 543.0
text = "Discordar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reorganizar" type="Button" parent="."]
margin_left = 865.0
margin_top = 519.0
margin_right = 983.0
margin_bottom = 557.0
text = "Reorganizar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="comeca" type="Button" parent="."]
modulate = Color( 0.219608, 0.901961, 0.121569, 1 )
margin_left = 41.0
margin_top = 517.0
margin_right = 159.0
margin_bottom = 555.0
text = "Ouvir"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Consulta" type="Button" parent="."]
margin_left = 45.0
margin_top = 466.0
margin_right = 117.0
margin_bottom = 486.0
text = "Consultar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pleople" type="Sprite" parent="."]
position = Vector2( 52, 73 )
scale = Vector2( 0.0566406, 0.0566406 )
texture = ExtResource( 8 )

[node name="Camara" type="Sprite" parent="."]
position = Vector2( 52, 144 )
scale = Vector2( 0.0742187, 0.0742187 )
texture = ExtResource( 6 )

[connection signal="button_up" from="Positivo" to="." method="_on_Positivo_button_up"]
[connection signal="button_up" from="Negativo" to="." method="_on_Negativo_button_up"]
[connection signal="button_up" from="Reorganizar" to="." method="_on_Reorganizar_button_up"]
[connection signal="button_up" from="comeca" to="." method="_on_comeca_button_up"]
[connection signal="button_up" from="Consulta" to="." method="_on_Consulta_button_up"]
